Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- #1583: LDAP Backing Directory supports SSHA encryption scheme, and this
  is now the default behaviour
Bug fixes:
~~~~~~~~~~
- Updated brazilian portugese translations (thanks to mo.menezes@gmail.com).
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- _getEntry() accepts a 'default' keyword argument